<resources>
    <string name="app_name">My Home IoT</string>
    <string name="welcome">Welcome!</string>
    <string name="next">Next</string>
    <string name="frw_accept_privacy_policy_text">I accept the #link0(privacy policy)</string>
    <string name="privacy_policy_link">#link0(Privacy policy)</string>
    <string name="frw_accept_privacy_policy_link">https://sites.google.com/view/myhomeiot/</string>
    <string name="app_version">Version: %s</string>

    <string name="lamp_ip_address">Lamp ip address</string>
    <string name="lamp_port">Lamp port</string>
    <string name="default_port_8888" translatable="false">8888</string>
    <string name="check_connection">Check connection</string>

    <string name="check_connection_status_checking">Checking connection…</string>
    <string name="check_connection_status_failed">Connection check failed</string>
    <string name="check_connection_status_incorrect_data">Incorrect data, please check ip and port</string>
    <string name="check_connection_status_success">Connection check success</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="loading_please_wait">Loading, please wait</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="current_mode">Mode: %s</string>
    <string name="menu_home">Home</string>
    <string name="nav_bar_item_home_desc">Home</string>
    <string name="nav_bar_item_settings_desc">Settings</string>

    <string-array name="gyver_lamp_modes">
        <item>Сonfetti</item>
        <item>Fire</item>
        <item>Rainbow vertical</item>
        <item>Rainbow horizontal</item>
        <item>Change color</item>
        <item>Madness 3D</item>
        <item>Сlouds 3D</item>
        <item>Lava 3D</item>
        <item>Plasma 3D</item>
        <item>Rainbow 3D</item>
        <item>Peacock 3D</item>
        <item>Zebra 3D</item>
        <item>Forest 3D</item>
        <item>Ocean 3D</item>
        <item>Color</item>
        <item>Snow</item>
        <item>Matrix</item>
        <item>Fireflies</item>
        <item>Unknown</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Preferences Screen -->
    <string-array name="pref_dark_mode_items">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>

    <string-array name="pref_dark_mode_items_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_build_number">Build number</string>
    <string name="pref_privacy">Privacy Policy</string>
    <string name="pref_privacy_summary">Read in browser</string>
    <string name="pref_app_theme">Theme of application</string>

</resources>
